force-app/main/default/objects/Country_And_Country_Code__c/Country_And_Country_Code__c.object-meta.xml
<CustomObject>
    <description>Contains countries and country codes</description>
    <label>Country And Country Code</label>
    <nameField>
        <label>Country And Country Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries And Country Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>