force-app/main/default/objects/Country_And_Country_Code__c/fields/ISO_Code_2__c.field-meta.xml
<CustomField>
    <fullName>ISO_Code_2__c</fullName>
    <label>ISO Code 2</label>
    <length>2</length>
    <type>Text</type>
</CustomField>