force-app/main/default/objects/Country_And_Country_Code__c/fields/ISO_Code_3__c.field-meta.xml
<CustomField>
    <fullName>ISO_Code_3__c</fullName>
    <label>ISO Code 3</label>
    <length>3</length>
    <type>Text</type>
</CustomField>