force-app/main/default/objects/Country_And_Country_Code__c/listViews/All_Countries.listView-meta.xml
<ListView>
    <fullName>All_Countries</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>ISO_Code_2__c</columns>
    <columns>ISO_Code_3__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Countries</label>
    <language>en_US</language>
</ListView>